--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .idea/workspace.xml
 .idea/workspace.xml
+*.name
+.idea/deployment.xml
+.idea/misc.xml
+*.xml
+.idea/SubjectChooser.iml
+.idea/misc.xml
